fixed partial wasn't rendering

--- a/app/views/cart/index.erb
+++ b/app/views/cart/index.erb
@@ -14,7 +14,7 @@
 
     <div id="cart" class="cart">
         <div id="items">
-            <% partial 'cart/cart', :collection => @products %>
+            <%= partial 'cart/cart', :collection => @products %>
         </div>
         <div style="clear: both"></div>
     </div>
