remove one of the javascript include tag to saving lines

--- a/app/views/cart/_cart.erb
+++ b/app/views/cart/_cart.erb
@@ -1,7 +1,7 @@
 <% session[:cart].each_with_index do |product, quantity| %>
     <div>
         <% 1.upto(quantity) do |i| %>
-            <%= image_tag "product#{quantity}.png", :class => 'cart-items', 
+            <%= image_tag "product_#{quantity}.png", :class => 'cart-items', 
                 :id => "item_#{quantity}_#{i}",
                 :style => 'position:relative' 
             %>
@@ -10,6 +10,6 @@
     </div>
 <% end %>
 
-<% if session[:cart].empty? %>
+<% unless session[:cart].empty? %>
     nothing yet in your shopping cart.	
 <% end %>
