--- a/app/views/cart/index.erb
+++ b/app/views/cart/index.erb
@@ -21,5 +21,4 @@
 
 </div>
 
-<%= javascript_include_tag 'protopak' %> 
-<%= javascript_include_tag 'application' %>
+<%= javascript_include_tag 'protopak', 'application' %> 
