fixed problem for dropping new items

--- a/app/views/cart/index.erb
+++ b/app/views/cart/index.erb
@@ -20,7 +20,7 @@
 
     <div id="cart" class="cart">
         <div id="items">
-            <%= partial 'cart/cart', :collection => @products %>
+            <%= partial 'cart/cart' %>
         </div>
         <div style="clear: both"></div>
     </div>
