added nothing message fix

--- a/app/views/cart/_cart.erb
+++ b/app/views/cart/_cart.erb
@@ -10,6 +10,6 @@
     </div>
 <% end %>
 
-<% unless session[:cart] %>
+<% if session[:cart].blank? %>
     nothing yet in your shopping cart.	
 <% end %>
