--- a/app/views/cart/index.erb
+++ b/app/views/cart/index.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'main' %>
 <%= stylesheet_link_tag 'cart' %>
-<h1>padrino Apple store demo</h1>
+<h1>Padrino web framework Apple store demo</h1>
 
 <div style="height:20px">
     <p id="indicator" style="display:none">
@@ -8,9 +8,15 @@
     </p>
 </div>
 
+<p>This page demonstrates Ajax support in <a href="http://www.padrinorb.com/">Padrino web framework</a>.
+    Original idea from <a href="http://script.aculo.us/demos/shop">script.aculo.us</a>.
+    Documentation idea from <a href="http://symfony-project.org">symfony</a>.
+</p> 
+
+<p>Drag products to the cart to fill it:</p>
+
 <div id="shopping_cart" data-url="<%= url(:cart, :add, :format => :js) %>">
 
-    <h2>Products:</h2>
     <div id="product_list">
         <% @products.each_with_index do |product, index| %>
             <%= image_tag "product#{index}.png", :class => 'products', :id => "product_#{index}" %>
